--- a/Frontend/html/register.html
+++ b/Frontend/html/register.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/register.css">
 </head>
 <body>
 
-<div class="container">
+<div class="register-container">
     <h2>Register</h2>
 
     <form id="registerForm">
