--- a/Frontend/html/login.html
+++ b/Frontend/html/login.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
 
-<div class="container">
+<div class="login-container">
     <h2>Login</h2>
 
     <form id="loginForm">
