additionla css functionalities

--- a/Frontend/html/todos.html
+++ b/Frontend/html/todos.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-<h2 class="page-title">LET'S DO IT!</h2>
+<h2 class="page-title">
+    <img src="../assets/todoimg.svg" class="title-icon" alt="logo">
+    LET'S DO IT!</h2>
 
 <div class="todo-layout">
 
