--- a/Frontend/html/todos.html
+++ b/Frontend/html/todos.html
@@ -11,6 +11,10 @@
 <h2 class="page-title">
     <img src="../assets/todoimg.svg" class="title-icon" alt="logo">
     LET'S DO IT!</h2>
+    
+ <div class="greeting-text">
+    <span id="greeting"></span>
+</div>   
 
 <div class="todo-layout">
 
@@ -36,6 +40,9 @@
 </div>
 <div id="toast"></div>
 
+<div class="bottom-bar">
+    <button class="logout-btn" id="logoutBtn">Logout</button>
+</div>
 
 <script src="../js/todos.js"></script>
 </body>
